--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@remix-run/serve": "^1.8.1",
     "@remix-run/server-runtime": "^1.8.1",
     "bcryptjs": "^2.4.3",
+    "daisyui": "^2.45.0",
     "isbot": "^3.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
