Finished up some basic Readme stuff

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
-DATABASE_URL="file:./data.db?connection_limit=1"
-SESSION_SECRET="super-duper-s3cret"
+DATABASE_URL=file:./data.db?connection_limit=1
+SESSION_SECRET=super-duper-s3cret
 NYLAS_CLIENT_ID=
 NYLAS_CLIENT_SECRET=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-GOOGLE_REDIRECT_URI="http://localhost:3000/callback" #keep this as the same
+GOOGLE_REDIRECT_URI=http://localhost:3000/callback #keep this as the same
 API_ENDPOINT=
+SCHEDULER_API=https://api.schedule.nylas.com
+SCHEDULER_WEB=https://schedule.nylas.com
 
