--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@remix-run/server-runtime": "^1.8.1",
     "bcryptjs": "^2.4.3",
     "daisyui": "^2.45.0",
+    "date-fns": "^2.29.3",
     "isbot": "^3.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
